added some chocolatey support, added java support in root setup, added critbin